src/test/resources/sem/good/prog4.ilang
routine f_acc(x: integer, acc: integer): integer is
  if x <= 0 then
    return acc
  else
    return f_acc(x - 1, acc + x)
  end
end

routine f(x: integer): integer => f_acc(x, 0)

routine main() is
  print f(10)
end
