src/test/resources/sem/bad/prog3.ilang
routine main(x: integer, y, flag: boolean) is
  var retval is 42

  print retval
end

